--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
-<body background="/Products/bg.jpg">
+<body background="/bg.jpg">
 
     <!-- Header Section -->
     <header>      
@@ -37,17 +37,17 @@
     <div class="commitments-container">
         <section class="commitments">
             <div class="commitment">
-                <img src="Products/made_in_india_logo.png" alt="100% Made In India">
+                <img src="made_in_india_logo.png" alt="100% Made In India">
                 <h3>100% Made In India</h3>
                 <p>Our products are made in India.</p>
             </div>
             <div class="commitment">
-                <img src="Products/handmade.png" alt="100% Handmade Products">
+                <img src="handmade.png" alt="100% Handmade Products">
                 <h3>100% Handmade Products</h3>
                 <p>We use the finest yarns to craft each product with care and precision.</p>
             </div>
             <div class="commitment">
-                <img src="Products/made_with_love_logo.png" alt="Made with love">
+                <img src="made_with_love_logo.png" alt="Made with love">
                 <h3>Made with love</h3>
                 <p>Every item is lovingly handcrafted by skilled artisans.</p>
             </div>
@@ -59,25 +59,25 @@
         <h2>Featured Products</h2>
         <div class="product-grid">
             <div class="product-item">
-                <img src="Products/red_handbag_1.png" alt="Product 1">
+                <img src="red_handbag_1.png" alt="Product 1">
                 <h3>Red Handbag</h3>
                 <p>₹349</p>
                 <a href="#" class="shop-button">Shop Now</a>
             </div>
             <div class="product-item">
-                <img src="Products/blue_handbag_1.png" alt="Product 2">
+                <img src="blue_handbag_1.png" alt="Product 2">
                 <h3>Blue Handbag</h3>
                 <p>₹299</p>
                 <a href="#" class="shop-button">Shop Now</a>
             </div>
             <div class="product-item">
-                <img src="Products/grey_pouch_1.png" alt="Product 3">
+                <img src="grey_pouch_1.png" alt="Product 3">
                 <h3>Gray Pouch</h3>
                 <p>₹149</p>
                 <a href="#" class="shop-button">Shop Now</a>
             </div>
             <div class="product-item">
-                <img src="Products/orange_cap_1.jpg" alt="Product 4">
+                <img src="orange_cap_1.jpg" alt="Product 4">
                 <h3>Orange Cap</h3>
                 <p>₹199</p>
                 <a href="#" class="shop-button">Shop Now</a>
