--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@
         <div class="product-grid">
             <!-- Example Products -->
             <div class="product-item">
-                <img src="Products/blue_handbag_1.png" alt="Product 1">
+                <img src="blue_handbag_1.png" alt="Product 1">
                 <h3>Product 1</h3>
                 <p>19.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(1)">Add to Cart</button>
@@ -48,7 +48,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/granny_pouch_2.png" alt="Product 2">
+                <img src="granny_pouch_2.png" alt="Product 2">
                 <h3>Product 2</h3>
                 <p>4.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(2)">Add to Cart</button>
@@ -61,7 +61,7 @@
 
             <!-- Add 18 more product items -->
             <div class="product-item">
-                <img src="Products/red_handbag_1.png" alt="Product 3">
+                <img src="red_handbag_1.png" alt="Product 3">
                 <h3>Product 3</h3>
                 <p>29.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(3)">Add to Cart</button>
@@ -73,7 +73,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/blue_handbag_1.png" alt="Product 1">
+                <img src="blue_handbag_1.png" alt="Product 1">
                 <h3>Product 1</h3>
                 <p>19.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(1)">Add to Cart</button>
@@ -85,7 +85,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/granny_pouch_2.png" alt="Product 2">
+                <img src="granny_pouch_2.png" alt="Product 2">
                 <h3>Product 2</h3>
                 <p>4.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(2)">Add to Cart</button>
@@ -98,7 +98,7 @@
 
             <!-- Add 18 more product items -->
             <div class="product-item">
-                <img src="Products/red_handbag_1.png" alt="Product 3">
+                <img src="red_handbag_1.png" alt="Product 3">
                 <h3>Product 3</h3>
                 <p>29.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(3)">Add to Cart</button>
@@ -110,7 +110,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/blue_handbag_1.png" alt="Product 1">
+                <img src="blue_handbag_1.png" alt="Product 1">
                 <h3>Product 1</h3>
                 <p>19.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(1)">Add to Cart</button>
@@ -122,7 +122,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/granny_pouch_2.png" alt="Product 2">
+                <img src="granny_pouch_2.png" alt="Product 2">
                 <h3>Product 2</h3>
                 <p>4.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(2)">Add to Cart</button>
@@ -135,7 +135,7 @@
 
             <!-- Add 18 more product items -->
             <div class="product-item">
-                <img src="Products/red_handbag_1.png" alt="Product 3">
+                <img src="red_handbag_1.png" alt="Product 3">
                 <h3>Product 3</h3>
                 <p>29.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(3)">Add to Cart</button>
@@ -147,7 +147,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/blue_handbag_1.png" alt="Product 1">
+                <img src="blue_handbag_1.png" alt="Product 1">
                 <h3>Product 1</h3>
                 <p>19.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(1)">Add to Cart</button>
@@ -159,7 +159,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/granny_pouch_2.png" alt="Product 2">
+                <img src="granny_pouch_2.png" alt="Product 2">
                 <h3>Product 2</h3>
                 <p>4.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(2)">Add to Cart</button>
@@ -172,7 +172,7 @@
 
             <!-- Add 18 more product items -->
             <div class="product-item">
-                <img src="Products/red_handbag_1.png" alt="Product 3">
+                <img src="red_handbag_1.png" alt="Product 3">
                 <h3>Product 3</h3>
                 <p>29.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(3)">Add to Cart</button>
@@ -184,7 +184,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/blue_handbag_1.png" alt="Product 1">
+                <img src="blue_handbag_1.png" alt="Product 1">
                 <h3>Product 1</h3>
                 <p>19.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(1)">Add to Cart</button>
@@ -196,7 +196,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/granny_pouch_2.png" alt="Product 2">
+                <img src="granny_pouch_2.png" alt="Product 2">
                 <h3>Product 2</h3>
                 <p>4.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(2)">Add to Cart</button>
@@ -209,7 +209,7 @@
 
             <!-- Add 18 more product items -->
             <div class="product-item">
-                <img src="Products/red_handbag_1.png" alt="Product 3">
+                <img src="red_handbag_1.png" alt="Product 3">
                 <h3>Product 3</h3>
                 <p>29.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(3)">Add to Cart</button>
@@ -221,7 +221,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/blue_handbag_1.png" alt="Product 1">
+                <img src="blue_handbag_1.png" alt="Product 1">
                 <h3>Product 1</h3>
                 <p>19.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(1)">Add to Cart</button>
@@ -233,7 +233,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/granny_pouch_2.png" alt="Product 2">
+                <img src="granny_pouch_2.png" alt="Product 2">
                 <h3>Product 2</h3>
                 <p>4.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(2)">Add to Cart</button>
@@ -246,7 +246,7 @@
 
             <!-- Add 18 more product items -->
             <div class="product-item">
-                <img src="Products/red_handbag_1.png" alt="Product 3">
+                <img src="red_handbag_1.png" alt="Product 3">
                 <h3>Product 3</h3>
                 <p>29.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(3)">Add to Cart</button>
@@ -258,7 +258,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/blue_handbag_1.png" alt="Product 1">
+                <img src="blue_handbag_1.png" alt="Product 1">
                 <h3>Product 1</h3>
                 <p>19.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(1)">Add to Cart</button>
@@ -270,7 +270,7 @@
             </div>
 
             <div class="product-item">
-                <img src="Products/granny_pouch_2.png" alt="Product 2">
+                <img src="granny_pouch_2.png" alt="Product 2">
                 <h3>Product 2</h3>
                 <p>4.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(2)">Add to Cart</button>
@@ -283,7 +283,7 @@
 
             <!-- Add 18 more product items -->
             <div class="product-item">
-                <img src="Products/red_handbag_1.png" alt="Product 3">
+                <img src="red_handbag_1.png" alt="Product 3">
                 <h3>Product 3</h3>
                 <p>29.99</p>
                 <button class="shop-button" onclick="openQuantitySelector(3)">Add to Cart</button>
