--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="commitments">
             <div class="commitment">
                 <img src="made_in_india_logo.png" alt="100% Made In India">
-                <br><h3>100% Made In India</h3>
+                <h3>100% Made In India</h3>
                 <p>Our products are made in India.</p>
             </div>
             <div class="commitment">
